--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     }
       </style>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3708029713982808"
+crossorigin="anonymous"></script>
+
    </head>
    <body>
       <div class="header_section">
