--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2024 All Rights Reserved. Design by KayTech-Code Catalyst</a></p>
+            <p class="copyright_text">2024 All Rights Reserved. Design by KayTech-Code Catalyst || <a href="privacyPolicy.html" >Privacy and Policy</a></p>
          </div>
       </div>
       <!-- copyright section end -->
